--- a/Python File/Extraction_and_Preprocessing.ipynb
+++ b/Python File/Extraction_and_Preprocessing.ipynb
@@ -9698,7 +9698,7 @@
    "outputs": [],
    "source": [
     "# saving the dataframe as csv into local system\n",
-    "df_statewise_total.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_statewise_total.csv\",index = False)"
+    "df_statewise_total.to_csv(\"./df_statewise_total.csv\",index = False)"
    ]
   },
   {
@@ -9718,7 +9718,7 @@
     "\n",
     "df_delta7_statewise = df_delta7_statewise.rename_axis('state', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_delta7_statewise.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_delta7_statewise.csv\",index = False)\n"
+    "df_delta7_statewise.to_csv(\"./df_delta7_statewise.csv\",index = False)\n"
    ]
   },
   {
@@ -9738,7 +9738,7 @@
     "\n",
     "df_delta_statewise = df_delta_statewise.rename_axis('state', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_delta_statewise.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_delta_statewise.csv\",index = False)\n"
+    "df_delta_statewise.to_csv(\"./df_delta_statewise.csv\",index = False)\n"
    ]
   },
   {
@@ -9758,7 +9758,7 @@
     "\n",
     "df_meta_statewise = df_meta_statewise.rename_axis('state', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_meta_statewise.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_meta_statewise.csv\",index = False)\n"
+    "df_meta_statewise.to_csv(\"./df_meta_statewise.csv\",index = False)\n"
    ]
   },
   {
@@ -9789,7 +9789,7 @@
     "\n",
     "df_districts_statewise_delta21_14 = df_districts_statewise_delta21_14.rename_axis('district', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_districts_statewise_delta21_14.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_districts_statewise_delta21_14.csv\",index = False)"
+    "df_districts_statewise_delta21_14.to_csv(\"./df_districts_statewise_delta21_14.csv\",index = False)"
    ]
   },
   {
@@ -9817,7 +9817,7 @@
     "\n",
     "df_districts_statewise_total = df_districts_statewise_total.rename_axis('district', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_districts_statewise_total.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_districts_statewise_total.csv\",index = False)"
+    "df_districts_statewise_total.to_csv(\"./df_districts_statewise_total.csv\",index = False)"
    ]
   },
   {
@@ -9845,7 +9845,7 @@
     "\n",
     "df_districts_statewise_delta = df_districts_statewise_delta.rename_axis('district', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_districts_statewise_delta.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_districts_statewise_delta.csv\",index = False)"
+    "df_districts_statewise_delta.to_csv(\"./df_districts_statewise_delta.csv\",index = False)"
    ]
   },
   {
@@ -9873,7 +9873,7 @@
     "\n",
     "df_districts_statewise_delta7 = df_districts_statewise_delta7.rename_axis('district', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_districts_statewise_delta7.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_districts_statewise_delta7.csv\",index = False)"
+    "df_districts_statewise_delta7.to_csv(\"./df_districts_statewise_delta7.csv\",index = False)"
    ]
   },
   {
@@ -9901,7 +9901,7 @@
     "\n",
     "df_districts_statewise_meta = df_districts_statewise_meta.rename_axis('district', axis='index').reset_index() # changing index into column\n",
     "\n",
-    "df_districts_statewise_meta.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\df_districts_statewise_meta.csv\",index = False)"
+    "df_districts_statewise_meta.to_csv(\"./df_districts_statewise_meta.csv\",index = False)"
    ]
   },
   {
@@ -9948,7 +9948,7 @@
     "\n",
     "# Merge all individual dataframes vertically into a single dataframe\n",
     "merged_df = pd.concat(all_state.values(), ignore_index=True)\n",
-    "merged_df.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\ts_delta7.csv\",index=False)\n",
+    "merged_df.to_csv(\"./ts_delta7.csv\",index=False)\n",
     "\n"
    ]
   },
@@ -9984,7 +9984,7 @@
     "\n",
     "# Merge all individual dataframes vertically into a single dataframe\n",
     "merged_df = pd.concat(all_state.values(), ignore_index=True)\n",
-    "merged_df.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\ts_delta.csv\",index=False)\n",
+    "merged_df.to_csv(\"./ts_delta.csv\",index=False)\n",
     "\n"
    ]
   },
@@ -10020,7 +10020,7 @@
     "\n",
     "# Merge all individual dataframes vertically into a single dataframe\n",
     "merged_df = pd.concat(all_state.values(), ignore_index=True)\n",
-    "merged_df.to_csv(r\"C:\\Users\\adity\\Desktop\\DA\\MASAI\\PROJECT\\trial\\ts_total.csv\",index=False)\n",
+    "merged_df.to_csv(\"./ts_total.csv\",index=False)\n",
     "\n"
    ]
   },
